# CProjects

./: CMakeLists.txt
Labs/Lesson08/: pex0.c
Labs/Lesson09/: lab09fixMe.c  lab09functs.c  lab09functs.h  lab09main.c  lab09unitTest.c
Labs/Lesson10/: lab10functs.c  lab10functs.h  lab10main.c  unitTests10.c
Labs/Lesson11/: lab11.c  lab11.h
Labs/Lesson12/: lab12.c  lab12.h
Labs/Lesson13/: lab13.c  lab13.h
Labs/Lesson14/: CMakeLists.txt  lab14fbFuncts.c  lab14fbFuncts.h  lab14functs.c  lab14functs.h  lab14main.c
Labs/Lesson15/: CMakeLists.txt  lab15fbFuncts.c  lab15fbFuncts.h  lab15functs.c  lab15functs.h  lab15main.c
Labs/Lesson16/: CMakeLists.txt  lab16functs.c  lab16functs.h  lab16main.c
Labs/Lesson19/: lab19functs.c  lab19functs.h  lab19main.c
Labs/Lesson20/: CMakeLists.txt  lab20functs.c  lab20functs.h  lab20main.c
Labs/Lesson22/: CMakeLists.txt  lab22.c  lab22.h
Labs/Lesson23/: CMakeLists.txt  lab23functs.c  lab23functs.h  lab23main.c
Labs/Lesson24/: lab24.c
Labs/Lesson25/: lab25.c  lab25.h
Labs/Lesson28/: CMakeLists.txt  lab28.c  lab28.h
Labs/Lesson30/: CMakeLists.txt  lab30.c  lab30.h
PEX/PEX1/: PEX1.c  PEX1.h
